--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Swap Design</title>
     <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.3.1/flatly/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         
     </style>
@@ -34,7 +34,7 @@
 </div>
 
 
-<form method="post" action="send_mail.php">
+<form method="post" action="mail_handler.php">
 <p>
 <label>Name
 <input type="text" name="name" required>
@@ -79,7 +79,7 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="js/countdown.jquery.js"></script>
+    <script src="countdown.jquery.js"></script>
    
 </body>
 
