--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             
             <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block">
                 <div class="imgsetting d-block  align-items-center">
-                    <img src="img/rocket.png" height="450px;" width="350px">
+                    <img src="rocket.png" height="450px;" width="350px">
                     </div>
             </div>
            </div>
